--- a/client/src/components/pages/HomePage.css
+++ b/client/src/components/pages/HomePage.css
@@ -1,3 +1,48 @@
-body-background {
-    background-image: url('../images/colorBackground.png');
+#home-main {
+    height: 500px;
+}
+
+#home-property-list {
+    overflow: auto;
+    width: 800px;
+    float: left;
+}
+
+.home-card {
+    height: 200px;
+    padding: 10px 5px;
+}
+
+.home-card:hover {
+    opacity: 0.2;
+    background-color: white;
+    cursor: pointer;
+}
+
+.home-card-element {
+    float: left;
+    margin-left: 10px;
+}
+
+.home-card-image-big {
+    max-width: 300px;
+    border-radius: 15px;
+}
+
+.home-card-image-small {
+    border-radius: 8px;
+    max-width: 100%;
+    max-height: 48%;
+}
+
+.home-card-container-image {
+    max-width: 150px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.home-card-panel {
+    width: 200px;
 }
