Added more css for property display page

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,3 +1,7 @@
+* {
+    font-family: sans-serif;
+}
+
 .color-background {
     background-image: url('../images/colorBackground.png');
     background-size: cover;
