--- a/client/src/components/pages/HomePage.css
+++ b/client/src/components/pages/HomePage.css
@@ -1,16 +1,19 @@
 #home-main {
     height: 500px;
+    width: 100%;
 }
 
 #home-property-list {
     overflow: auto;
-    width: 800px;
+    width: 58%;
     float: left;
 }
 
 .home-card {
     height: 200px;
     padding: 10px 5px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .home-card:hover {
@@ -19,30 +22,32 @@
     cursor: pointer;
 }
 
-.home-card-element {
+.home-card > * {
     float: left;
     margin-left: 10px;
+    max-height: 100%;
 }
 
 .home-card-image-big {
-    max-width: 300px;
+    max-width: 35%;
     border-radius: 15px;
 }
 
-.home-card-image-small {
-    border-radius: 8px;
-    max-width: 100%;
-    max-height: 48%;
-}
-
 .home-card-container-image {
-    max-width: 150px;
+    max-width: 30%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
+.home-card-container-image > img {
+    border-radius: 8px;
+    max-width: 100%;
+    max-height: 48%;
+}
+
 .home-card-panel {
-    width: 200px;
+    width: 25%;
+    height: 100%;
 }
