--- a/client/src/components/pages/HomePage.css
+++ b/client/src/components/pages/HomePage.css
@@ -1,6 +1,7 @@
 #home-main {
     height: 500px;
     width: 100%;
+    padding: 20px;
 }
 
 #home-property-list {
@@ -48,6 +49,6 @@
 }
 
 .home-card-panel {
-    width: 25%;
+    width: 30%;
     height: 100%;
 }
