--- a/client/src/components/pages/HomePage.css
+++ b/client/src/components/pages/HomePage.css
@@ -2,6 +2,8 @@
     height: 500px;
     width: 100%;
     padding: 20px;
+    display: flex;
+    justify-content: space-around;
 }
 
 #home-property-list {
@@ -50,5 +52,15 @@
 
 .home-card-panel {
     width: 30%;
+    height: 100%;
+}
+
+#home-maps-container-element {
+    width: 38%;
+    height: 100%;
+}
+
+#home-maps-map-element, #home-maps-loading-element {
+    width: 100%;
     height: 100%;
 }
