--- a/client/src/components/pages/HomePage.css
+++ b/client/src/components/pages/HomePage.css
@@ -1,9 +1,13 @@
+div.jumbotron {
+  background-color: white;
+  padding: 0px 30px;
+}
+
 #home-main {
   height: 100%;
   width: 100%;
   padding: 20px;
   display: flex;
-  justify-content: space-around;
   flex-direction: column;
 }
 
@@ -47,8 +51,6 @@
 }
 
 .home-card:hover {
-  opacity: 0.2;
-  background-color: white;
   cursor: pointer;
 }
 
@@ -58,13 +60,12 @@
   max-height: 100%;
 }
 
-.home-card-image-big {
-  max-width: 35%;
-  border-radius: 15px;
+.home-card-video {
+  width: 35%;
 }
 
 .home-card-container-image {
-  max-width: 30%;
+  width: 20%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -75,6 +76,7 @@
   border-radius: 8px;
   max-width: 100%;
   max-height: 48%;
+  object-fit: cover;
 }
 
 .home-card-panel {
