--- a/client/src/components/pages/RenterPropertyPage.css
+++ b/client/src/components/pages/RenterPropertyPage.css
@@ -13,6 +13,7 @@
 }
 
 #renter-property-side {
+  margin-top: 5%;
   width: 25%;
   height: 100%;
   padding: 20px 30px;
@@ -52,15 +53,21 @@
 #renter-property-body-description {
   width: 58%;
   height: 100%;
-  border: 1px solid black;
-  border-radius: 4px;
-  padding: 1px 5px;
+  opacity: 88%;
+  border: 1px solid #8C8C8C;
+  border-radius: 5px;
+  padding: 2px 5px;
   overflow: auto;
+  color: #8C8C8C;
+  font-family: AvenirNext;
+  mix-blend-mode: luminosity;
 }
 
 #renter-property-body-summary {
   width: 38%;
   height: 100%;
+  font-family: AppleGothic;
+  mix-blend-mode: normal;
 }
 
 #agent-popover {
@@ -97,5 +104,6 @@ h3.popover-title > p {
   width: 100%;
   margin: 10px 0px 0px 0px;
   border-radius: 5px;
+  border: 1px solid #8C8C8C;
   overflow: auto;
 }
