--- a/client/src/components/pages/RenterPropertyPage.css
+++ b/client/src/components/pages/RenterPropertyPage.css
@@ -13,7 +13,6 @@
 }
 
 #renter-property-side {
-  margin-top: 5%;
   width: 25%;
   height: 100%;
   padding: 20px 30px;
@@ -38,6 +37,7 @@
 
 #renter-property-body-graphics > .carousel {
   width: 38%;
+  height: 100%;
   overflow: hidden;
 }
 
