--- a/client/src/components/pages/StatusPage.css
+++ b/client/src/components/pages/StatusPage.css
@@ -31,6 +31,7 @@
   padding: 5px 10px;
   background-color: white;
   border: 1px solid #BC83DE;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
