Store custom url now

--- a/client/src/components/pages/HomePage.css
+++ b/client/src/components/pages/HomePage.css
@@ -4,7 +4,7 @@ div.jumbotron {
 }
 
 #home-main {
-  height: 100%;
+  height: calc(100% - 54px);
   width: 100%;
   padding: 20px;
   display: flex;
